# LLMpostor

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ROLLBACK_PROCEDURES.md  TEST_ORGANIZATION.md  app.py  config.py  config_factory.py  conftest.py  container.py  docker-compose.yml  gunicorn.conf.py  nginx.conf  package-lock.json  package.json  prompts.yaml  pyproject.toml  run_dev.py  test_modular_load.html  vitest.config.js  wsgi.py
.github/workflows/: ci.yml  complexity_delta.yml
docs/: FRONTEND_ARCHITECTURE.md
mockups/android-lab/: index.html
mockups/ascii-art/: index.html
mockups/blueprint/: index.html
mockups/code-editor/: index.html
mockups/comic/: index.html
mockups/command-line/: index.html
mockups/cyber-comic/: index.html
mockups/desktop-gui/: index.html
mockups/game-hud/: index.html
mockups/glitch-art/: index.html
mockups/hologram/: index.html
mockups/mainframe-computer/: index.html
mockups/medieval/: index.html
mockups/minimal/: index.html
mockups/neon/: index.html
mockups/pirate/: index.html
mockups/pixel-dungeon/: index.html
scripts/: compare_complexity.py  complexipy_formatter.py
src/: __init__.py  auto_game_flow_manager.py  broadcast_manager.py  content_manager.py  error_handler.py  game_manager.py  room_manager.py  room_manager_old.py  session_manager.py  socket_handlers.py
templates/: base.html  game.html  index.html
tests/: COMMON_MOCK_PATTERNS.md  CONNECTION_TEST_ORGANIZATION.md  INTERFACE_TESTS.md  __init__.py  migration_compat.py  setup.js  test_helpers.py
(+192 files in other folders)
